packages/taquito-michel-codec/test/contracts_015/ill_typed/view_toplevel_bad_input_type.tz
parameter nat ;
storage nat ;
code { CAR ; NIL operation ; PAIR } ;
view "add" string nat { UNPAIR; ADD } ;
